@@ -70,6 +70,12 @@
     
     if(verbose) message("\t Reading experiment bigWig file.")
     
+    if(.Platform$OS.type == 'windows') {
+        warning("As of rtracklayer >= 1.37.6, BigWig is not supported on ",
+                "Windows. Thus loading data from BigWig files will most ",
+                "likely fail.", immediate. = TRUE)
+    }
+    
     bigWig_file <- import(getBigWigFile(object), format="BigWig")
     
     if(reverse)
