@@ -1,3 +1,9 @@
+########## version 0.99.7:
+
+Add warning for Windows user regarding possible problems reading BigWig files 
+because of rtracklayer (>= 1.37.6) that does not support this format on 
+Windows.
+
 ########## version 0.99.5:
 
 1) Provide a more exhaustive description of the package in the DESCRIPTION 
